<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NUIM Survival App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="FindYourRoom">Find Your Exam Hall</string>
    <string name="LowerLoftus">Lower Loftus</string>
    <string name="MainSportsHall">Main Sports Hall</string>
    <string name="SmallSportsHall">Small Sports Hall</string>
    <string name="IontasFoyer">Iontas Foyer</string>
    <string name="RyeHall">Rye Hall</string>
    <string name="AuxillaAX1">Auxilla AX1</string>
    <string name="FindyourLecHall">Find Your Lecture Hall</string>
    <string name="SerSide">Find Books</string>
    <string name="CliSide">Sell Books</string>
    <string name="JHL5">JHL5</string>
    <string name="JHL6">JHL6</string>
    <string name="JHT4">JHT4</string>
    <string name="JHT5">JHT5</string>
    <string name="JHT6">JHT6</string>
    <string name="JHT7">JHT7</string>
    <string name="JHT8">JHT8</string>
    <string name="JHT9">JHT9</string>
    <string name="JHT10">JHT10</string>
    <string name="LongCorridor">Long Corridor</string>
    <string name="Room61">61</string>
    <string name="Room62">62</string>
    <string name="APT">APT</string>
    <string name="ATC">ATC</string>
    <string name="AX1">AX1</string>
    <string name="AX2">AX2</string>
    <string name="BL">BL</string>
    <string name="BR">BR</string>
    <string name="CC1">CC1</string>
    <string name="CC2">CC2</string>
    <string name="CH">CH</string>
    <string name="CS1">CS1</string>
    <string name="CS2">CS2</string>
    <string name="CSR">CSR</string>
    <string name="ELT">ELT</string>
    <string name="ESR">ESR</string>
    <string name="GR">GR</string>
    <string name="HA">HA</string>
    <string name="HB">HB</string>
    <string name="HC">HC</string>
    <string name="HD">HD</string>
    <string name="HE">HE</string>
    <string name="HF">HF</string>
    <string name="HH">HH</string>
    <string name="IONSEM">IONSEM</string>
    <string name="JH1">JH1</string>
    <string name="JH2">JH2</string>
    <string name="JH3">JH3</string>
    <string name="JH4">JH4</string>
    <string name="JH5">JH5</string>
    <string name="JH6">JH6</string>
    <string name="JH7">JH7</string>
    <string name="KC1">KC1</string>
    <string name="KC2">KC2</string>
    <string name="LC">LC</string>
    <string name="JHT1">JHT1</string>
    <string name="JHT2">JHT2</string>
    <string name="JHT3">JHT3</string>
    <string name="LGH">LGH</string>
    <string name="MAH">MAH</string>
    <string name="MCL">MCL</string>
    <string name="MLLL">ML/LL</string>
    <string name="MPL">MPL</string>
    <string name="MS1">MS1</string>
    <string name="MS2">MS2</string>
    <string name="MTL">MTL</string>
    <string name="NMR">NMR</string>
    <string name="OCR">OCR</string>
    <string name="PCT">PCT</string>
    <string name="PH">PH</string>
    <string name="RH221">RH221</string>
    <string name="RVH">RVH</string>
    <string name="RYE">RYE</string>
    <string name="SLT">SLT</string>
    <string name="TH1">TH1</string>
    <string name="TH2">TH2</string>
    <string name="IONTH">IONTH</string>
    <string name="TVRoom61">Room 61</string>
    <string name="TVRoom62">Room 62</string>
    <string name="TVAPT">Apartment Lecture Theatre</string>
    <string name="TVAX1">Classhall 1</string>
    <string name="TVAX2">Classhall 2</string>
    <string name="TVBL">Biology Lecture Room</string>
    <string name="TVBR">Bewerunge Room</string>
    <string name="TVCC1">Computer Training Room 1</string>
    <string name="TVCC2">Computer Training Room 2</string>
    <string name="TVCH">Callan Hall</string>
    <string name="TVCS1">Computer Science Theatre 1</string>
    <string name="TVCS2">Computer Science Theatre 2</string>
    <string name="TVCSR">Computer Science Room</string>
    <string name="TVELT">Education Lecture Theatre</string>
    <string name="TVESR">Education Seminar Room</string>
    <string name="TVGR">Geography Room Rocque Lab</string>
    <string name="TVHA">Hall A</string>
    <string name="TVHB">Hall B</string>
    <string name="TVHC">Hall C</string>
    <string name="TVHD">Hall D</string>
    <string name="TVHE">Hall E</string>
    <string name="TVHF">Hall F</string>
    <string name="TVHH">Hall H</string>
    <string name="TVIONSEM">Iontas Seminar Room</string>
    <string name="TVJH1">John Hume Theatre 1</string>
    <string name="TVJH2">John Hume Theatre 2</string>
    <string name="TVJH3">John Hume Theatre 3</string>
    <string name="TVJH4">John Hume Theatre 4</string>
    <string name="TVJH5">John Hume Theatre 5</string>
    <string name="TVJH6">John Hume Theatre 6</string>
    <string name="TVJH7">John Hume Theatre 7</string>
    <string name="TVKC1">Kairos Communications Lab 1</string>
    <string name="TVKC2">Kairos Communications Lab 2</string>
    <string name="TVLC">Long Corridor Computer Room</string>
    <string name="TVJHT1">John Hume Tutorial Room 1</string>
    <string name="TVJHT2">John Hume Tutorial Room 2</string>
    <string name="TVJHT3">John Hume Tutorial Room 3</string>
    <string name="TVJHT4">John Hume Tutorial Room 4</string>
    <string name="TVJHT5">John Hume Tutorial Room 5</string>
    <string name="TVJHT6">John Hume Tutorial Room 6</string>
    <string name="TVJHT7">John Hume Tutorial Room 7</string>
    <string name="TVJHT8">John Hume Tutorial Room 8</string>
    <string name="TVJHT9">John Hume Tutorial Room 9</string>
    <string name="TVJHT10">John Hume Tutorial Room 10</string>
    <string name="TVLGH">Logic Hall</string>
    <string name="TVMAH">Maths Hall</string>
    <string name="TVMCL">Maths Computer Lab</string>
    <string name="TVMLLL">Middle Loftus/Lower Loftus</string>
    <string name="TVMPL">MAP Lodge</string>
    <string name="TVMS1">Maths Room 1</string>
    <string name="TVMS2">Maths Room 2</string>
    <string name="TVMTL">Music Technology Lab</string>
    <string name="TVNMR">New Music Room</string>
    <string name="TVOCR">O\'Callaghan Hall</string>
    <string name="TVPCT">Physics Chemistry Theatre</string>
    <string name="TVPH">Physics Hall</string>
    <string name="TVRH221">Rowan House Room 221</string>
    <string name="TVRVH">Riverstown Hall</string>
    <string name="TVRYE">Rye Hall</string>
    <string name="TVSLT">Science Lecture Theatre</string>
    <string name="TVTH1">Theatre 1</string>
    <string name="TVTH2">Theatre 2</string>
    <string name="TVATC">Assistive Technology Centre</string>
    <string name="TVIONTH">Iontas Theatre</string>
    <string name="Back">Back</string>
    <string name="title_activity_exam_room_map">ExamRoomMap</string>
    <string name="title_activity_the_rooms">Find Your Exam Hall</string>
    <string name="title_activity_map_room">MapRoom</string>
    <string name="title_activity_lect_locator">Find Your Lecture Room</string>
    <string name="title_activity_server_side">Buy Books</string>
    <string name="title_activity_client_side">Sell Books</string>

</resources>
